# tracer

./: CMakeLists.txt
include/: HitRecord.hpp  Material.hpp  MeshTriangle.hpp  Object.hpp  Scene.hpp  Sphere.hpp  Triangle.hpp  camera.hpp  global.hpp
scene/cornell-box/: scene.mtl  scene.xml
scene/living-room/: scene.mtl  scene.xml
scene/veach-mis/: scene.mtl  scene.xml
src/: main.cpp  test_external.cpp
